Fixed error with menu not aligning with icon and working correctly with  appBar hide on Scroll

--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -17,6 +17,10 @@
   top: -64px;
 }
 
+#scrollUp {
+  z-index: 100;
+}
+
 @media screen and (max-width:600px) {  
   .logo {
     display: none;
